Mnemosyne 2.10:

- Update to all the latest libraries, most importantly from Python 2.8
  to Python 2.11, and from PyQt5 to PyQt6. You might see better 
  performance.
- Tweaked appearance of application.  
- Optimised startup time.
- Switched audio and video support from mplayer to Qt.
- Fix Google text-to-speech for Spanish (reported by Language Lover).
- Support for multiple audiofiles in the webserver (patch by jooseef).
- Scale images and add support for Map card type in web client (patch by 
  gbear605).
- Fix TypeError when activating cards (patch by Adam Smalhofer). 
- Make sure the review server also works for non-latin audio files
  (reported by jooseef).
- Fix corner case when previewing cards after changing their card type 
  (reported by Gnome).
- Removed option to insert Flash in cards.  

Mnemosyne 2.9 : 2022-06-20

- Added an option to reset the learning history of either the current card
  or of a number of selected cards in the card browser.
- Changed the behaviour of "Cram recently learned new cards" to also include
  cards that were learned but had not yet come up for regular review. 
- Fixed a regression where the cramming scheduler would no longer save
  data. 
- The config.py option 'start_card_browser_sorted' now defaults to 'True' for
  new users. Existing users can still edit config.py manually. 
- Try harder to reach the maximum number of cards the user wants to memorise
  at once.
- Add webserver API call to retrieve number of scheduled cards 
  (patch by gbear605).
- Allow users to add webm images (patch by gojun077).
- Make sure script access to libmnemosyne also works for study modes
  other than "Scheduled - Forgotten - New" (bug report by Eloi Torrents).
- Added a config.py option 'max_scheduled_interval_days' to put an upper 
  limit to the scheduled interval. Dangerous, use this with caution and
  at your own risk! Accidentally putting this value too low will mess up
  your schedules without an option to undo this.