@@ -1,11 +1,3 @@
-- new translator infrastructure https://towardsdatascience.com/language-translation-using-python-bd8020772ccc
-https://github.com/Saravananslb/py-googletranslation ?
-
-- Better error message for: File "/usr/local/lib/python3.10/dist-packages/Mnemosyne-2.9-py3.10.egg/mnemosyne/libmnemosyne/databases/_sqlite3.py", line 95, in commit
-    return self.connection.commit()
- sqlite3.OperationalError: database is locked
-- update gui translations
-
 - postpone indefinitely/stop scheduling/postpone 100 years/remove from learning process?
 
 Android:
@@ -44,6 +36,7 @@ Minor bugs / issues:
 - checking for unused tags scales badly when deleting 1500 cards
 - can result in deleting same tag twice?
 -Are the configuration settings properly synced? Especially when creating a new clone.
+-Better video support?
 -Delete current card which is sentence card with only a sentence field does not
  seem to work.
 -when saving the position and the selection in the card browser, would it be
