@@ -27,9 +27,9 @@ class GoogleTranslator(Translator):
     def translate(self, card_type, foreign_text, target_language_id,
                   retries=0):
         # Lazy import to speed things up.
-        #           
-        #from google_trans_new import google_translator
-        from googletrans import Translator as google_translator
+                  
+        from google_trans_new import google_translator
+        #from googletrans import Translator as google_translator
 
         global translator
         if not translator:
@@ -37,11 +37,11 @@ class GoogleTranslator(Translator):
         source_language_id = self.config().card_type_property(\
             "language_id", card_type)
         try:
-            #result = translator.translate(foreign_text,
-            #    lang_tgt=target_language_id, lang_src=source_language_id).strip()
             result = translator.translate(foreign_text,
-                dest=target_language_id, src=source_language_id).text.strip()
-        except:
+                lang_tgt=target_language_id, lang_src=source_language_id).strip()
+            #result = translator.translate(foreign_text,
+            #    dest=target_language_id, src=source_language_id).text.strip()
+        except Exception as e:
             if retries < 5:
                 import time; time.sleep(2)
                 translator = google_translator()
